--- a/angular7/src/app/payment-details/payment-detail/payment-detail.component.html
+++ b/angular7/src/app/payment-details/payment-detail/payment-detail.component.html
@@ -84,7 +84,7 @@
     </div>
     
     <div class="form-group">
-        <button type="submit" class="btn btn-success btn-block" [disabled]="form.invalid"><i class="fa fa-database"></i> Submit</button>
+        <button type="submit" class="btn btn-success btn-block" [class.disabled-cursor]="form.invalid" [disabled]="form.invalid"><i class="fa fa-database"></i> Submit</button>
     </div>
 
 </form>
